# delegate_voting

./: .swp  README.md  todo
test/: index.js
zomes/agent/: zome.json
zomes/agent/code/: .build  Cargo.toml  func_lib.rs  struct_lib.rs
zomes/agent/code/src/: lib.rs
zomes/common/: Cargo.toml
zomes/common/src/: func_lib.rs  lib.rs  struct_lib.rs
zomes/master/: zome.json
zomes/master/code/: .build  Cargo.toml
zomes/master/code/src/: lib.rs
